--- a/src/screens/profile/InformationSection.css
+++ b/src/screens/profile/InformationSection.css
@@ -40,3 +40,14 @@
 .heading{
     adding-top:20px;
 }
+
+.dispNone{
+    display:none;
+}
+.dispBlock{
+    display: block;
+}
+.red{
+    color:red;
+}
+
